Fixed some styles and layout issues on windows 1536 x 864 size laptop resolution.

--- a/client/src/components/profile-info/ProficiencyTimeline.style.css
+++ b/client/src/components/profile-info/ProficiencyTimeline.style.css
@@ -1,7 +1,6 @@
 .timeline__wrapper {
 	padding-top: 0;
 	width: 96% !important;
-	margin: 0 1.3rem;
 }
 
 .timeline__wrapper::before {
@@ -10,4 +9,8 @@
 		rgba(65, 79, 122, 1) 60%,
 		rgba(240, 106, 99, 1) 100%
 	);
+}
+
+.vertical-timeline-element-content > span.vertical-timeline-element-date {
+	padding: 0.8rem 1rem;
 }
